test/libsolidity/syntaxTests/dataLocations/externalFunction/function_argument_location_specifier_test_external_calldata.sol
contract test {
    function f(bytes calldata) external;
}
// ----
// TypeError: (0-58): Contract "test" should be marked as abstract.
